Setup API for data processing

--- a/PondeerWithTailwind/Shared/NavMenu.razor
+++ b/PondeerWithTailwind/Shared/NavMenu.razor
@@ -6,6 +6,7 @@
             <NavLink ActiveClass="text-purple-800 dark:text-purple-400" href="" Match="NavLinkMatch.All" class="mr-10 font-semibold">Home</NavLink>
             <NavLink ActiveClass="text-purple-800 dark:text-purple-400" href="counter" class="mr-10 font-semibold">Counter</NavLink>
             <NavLink ActiveClass="text-purple-800 dark:text-purple-400" href="fetchdata" class="font-semibold">Fetch data</NavLink>
+            <NavLink ActiveClass="text-purple-800 dark:text-purple-400" href="api-test" class="font-semibold"> API Test</NavLink>
         </nav>
     </div>
     <div class="flex items-center">
